--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:35:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:35:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:35:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:36:30</td>   <td>50264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:36:30</td>   <td>50264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:36:30</td>   <td>50264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:35:50</td>   <td>10182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkTest()[pri:3, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">verifyContactsLinkTest</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:34:53</td>   <td>-47164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitleTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">verifyHomePageTitleTest</td> 
-  <td>main@696933920</td>   <td></td> </tr>
-<tr bgcolor="e9ddb4">  <td>21/09/15 19:35:00</td>   <td>-40247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@3fb1549b]">verifyUserNameTest</td> 
-  <td>main@696933920</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
+  <td>main@2032079962</td>   <td></td> </tr>
 </table>
