--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>21/09/15 21:16:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@35aea049]">loginTest</td> 
-  <td>main@1187903677</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>21/09/15 21:16:49</td>   <td>6481</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@35aea049]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>21/09/15 21:16:42</td>   <td>-82</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@35aea049]">crmLogoImageTest</td> 
-  <td>main@1187903677</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>21/09/15 21:16:35</td>   <td>-7401</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@35aea049]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
-<tr bgcolor="b4c3a9">  <td>21/09/15 21:16:42</td>   <td>-103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@35aea049]">loginPageTitleTest</td> 
-  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/09/18 19:52:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@614ca7df]">loginPageTitleTest</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>21/09/18 19:52:46</td>   <td>2788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@f5acb9d]">validateCreateNewContact</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/09/18 19:52:37</td>   <td>-5780</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@614ca7df]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>21/09/18 19:52:46</td>   <td>2788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@f5acb9d]">validateCreateNewContact</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/09/18 19:52:43</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@614ca7df]">loginTest</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/09/18 19:52:43</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@614ca7df]">crmLogoImageTest</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="b4c3a9">  <td>21/09/18 19:52:45</td>   <td>1990</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@614ca7df]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1855026648</td>   <td></td> </tr>
+<tr bgcolor="7caca8">  <td>21/09/18 19:52:46</td>   <td>2788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@f5acb9d]">validateCreateNewContact</td> 
+  <td>main@1855026648</td>   <td></td> </tr>
 </table>
