--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
-  <td>main@2032079962</td>   <td></td> </tr>
-<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
-  <td>main@2032079962</td>   <td></td> </tr>
-<tr bgcolor="a9766d">  <td>21/09/18 19:49:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderExample.validateCreateNewContact(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:2, instance:com.crm.qa.testcases.DataProviderExample@69997e9d]">validateCreateNewContact</td> 
-  <td>main@2032079962</td>   <td></td> </tr>
+<tr bgcolor="e9ddb4">  <td>21/09/19 00:40:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoImageTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@4229bb3f]">crmLogoImageTest</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="e9ddb4">  <td>21/09/19 00:40:33</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@4229bb3f]">loginPageTitleTest</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="e9ddb4">  <td>21/09/19 00:40:33</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@4229bb3f]">loginTest</td> 
+  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="e9ddb4">  <td>21/09/19 00:40:27</td>   <td>-5422</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4229bb3f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
 </table>
